# Intelligent-stock-advisor

./: BUILD-COMMANDS.md  Dockerfile  Dockerfile.mcp  Dockerfile.unified  GCP-DEPLOYMENT.md  Makefile  RAG_SETUP.md  README.md  STREAMLIT_README.md  app.yaml  build-image.sh  build-with-cloudbuild.sh  check_neo4j_data.py  cloud-run-config.yaml  cloudbuild-trigger.yaml  cloudbuild.yaml  deploy-gcp-fast.sh  deploy-gcp.sh  deploy.sh  deployment-guide.md  direct-deploy.sh  docker-compose.yml  docker-dev-guide.md  example_usage.py  financial_fields_summary.txt  pyproject.toml  requirements-dev.txt  requirements-venv.txt  requirements.txt  setup-gcp-cicd.sh  streamlit_app.py  streamlit_mcp_integration.py  test_ai_models.py  test_chat.py  test_neo4j_cloud.py  test_neo4j_simple.py  test_server.py  update-neo4j-secret.sh
docs/: DEPLOYMENT_GUIDE.md  DESIGN_DOCUMENT.md  DEVELOPER_GUIDE.md  NEO4J_INTEGRATION_PLAN.md  QUICK_REFERENCE.md  README.md  TECHNICAL_SPECIFICATIONS.md  USER_GUIDE.md
src/: ai_providers.py  graph_mcp_extension.py  neo4j_client.py  rag_graph_integration.py  rag_integration.py  rag_system.py
src/mcp_financial_server/: __init__.py  __main__.py  server.py
