[project]
name = "mcp-financial-server"
version = "0.1.0"
description = "MCP server for fetching historical stock price data using Yahoo Finance"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "mcp>=1.0.0",
    "yfinance>=0.2.18",
    "pandas>=2.0.0",
    "numpy>=1.24.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
mcp-financial-server = "mcp_financial_server:main"